Fix mobile styles - hide content overflow

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -85,6 +85,7 @@ ul {
   }
 }
 .section__content {
+  overflow: hidden;
   padding: 0 3.25rem;
 
   &.-skills {
@@ -168,6 +169,9 @@ ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 0;
+}
+.skills__group {
+  padding-right: .5rem;
 }
 .skills__groupName {
   font-size: .88rem;
